@@ -1,3 +1,9 @@
+2004-05-02  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>
+
+	* timidity/timidity.c (parse_opt_h): ditto.
+	* timidity/timidity.h (DEFAULT_RESAMPLATION): ditto.
+	* configure.in: --enable-spline was not working
+
 2004-04-29  Saito <saito@intaa.net>
 
 	* timidity/reverb.c, timidity/optcode.h: Fix around Insertion Effect.
